@@ -918,6 +918,7 @@ static void *_slurmctld_background(void *no_data)
 			last_sched_time = now;
 			if (schedule())
 				last_checkpoint_time = 0;  /* force state save */
+			set_job_elig_time();
 		}
 
 		if (difftime(now, last_trigger) > TRIGGER_INTERVAL) {
